# ha-alexa

./: .cursorrules  .gitignore  LICENSE  Makefile  README.md  alexa_authorize_handler.py  alexa_oauth_handler.py  alexa_smart_home_handler.py  deploy.py  parameter_store.py  pyproject.toml  requirements.txt  template.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml
events/: README.md  alexa-brightness-control.json  alexa-discovery.json  alexa-power-control.json  oauth-authorization-code.json  oauth-refresh-token.json
tests/: __init__.py  conftest.py  test_alexa_authorize_handler.py  test_alexa_authorize_handler_coverage.py  test_alexa_oauth_handler.py  test_alexa_oauth_handler_coverage.py  test_alexa_smart_home_handler.py  test_alexa_smart_home_handler_coverage.py  test_parameter_store.py
